moon/web/deploy-shop-moon.yaml
---
#shop 디플로이 for moon
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-shop-moon
  namespace: moon
spec:
  replicas: 1
  selector:
    matchLabels:
      company: moon
      page: shop
  template:
    metadata:
      name: pod-shop-moon
      labels:
        company: moon
        page: shop
    spec:
      containers:
      - name: ctn-shop-moon
        image: 211.183.3.199:5000-shop-moon:1.0
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 250m
---
#shop 서비스 for moon
apiVersion: v1
kind: Service
metadata:
  name: svc-shop-moon
  namespace: moon
spec:
  ports:
  - name: port-shop-moon
    targetPort: 80
    port: 80
  selector:
    company: moon
    page: shop
