moon/web/ingress-moon1.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-moon
  namespace: moon
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-main-sun
            port:
              number: 80
      - path: /shop
        pathType: Prefix
        backend:
          service:
            name: svc-shop-sun
            port:
              number: 80
      - path: /finance
        pathType: Prefix
        backend:
          service:
            name: svc-finance-sun
            port:
              number: 80
